--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </li>
                     <li class="product__item">
                         <div class="product__img">
-                            <img src="./img/content/product_1.png" alt="product" class="product__img-item">
+                            <img src="./img/content/product_2.png" alt="product" class="product__img-item">
                         </div>
                         <div class="product__content">
                             <div class="specs">
@@ -291,7 +291,7 @@
                                                 </svg>
                                             </div>
                                             <span class="dropdown__title">Дальность</span>
-                                            <span class="dropdown__desc">10 м</span>
+                                            <span class="dropdown__desc">12 м</span>
                                         </li>
                                         <li class="dropdown__item">
                                             <div class="dropdown__img">
@@ -300,7 +300,7 @@
                                                 </svg>
                                             </div>
                                             <span class="dropdown__title">Зарядка</span>
-                                            <span class="dropdown__desc">2 ч</span>
+                                            <span class="dropdown__desc">3 ч</span>
                                         </li>
                                         <li class="dropdown__item">
                                             <div class="dropdown__img">
@@ -324,13 +324,14 @@
                                 </div>
                             </div>
                             <h2 class="product__title section__title">
-                                beats solo 3. цвет 
-                                «атласное серебро»
+                                beats solo pro. цвет 
+                                «красный цитрус»
                             </h2>
                             <div class="product__subtitle">
                             <p>
-                                    Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.
-                                </p>
+                                Беспроводные наушники Solo Pro помогают настроиться на творчество. 
+                                Для этого предусмотрено два режима прослушивания: режим с активным шумоподавлением и Прозрачный режим.
+                            </p>
                             </div>
                             <div class="param">
                                 <ul class="param__list">
