--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <div class="container">
                 <div class="section__title order__title">Закажите доставку</div>
                 <form class="form">
-                    <input type="hidden" name="to" value="somewhere@gmail.com">
+                    <input type="hidden" name="to" value="prm1078life@gmail.com">
                     <div class="form__col">
                         <div class="form__row">
                             <label class="form__block">
@@ -654,6 +654,78 @@
                     </div>
                 </div>
             </footer>
+        </section>
+        <section class="section color-section">
+            <div class="container color__container">
+                <h2 class="section__title">Цвета</h2>
+                <div class="color">
+                    <ul class="color__list">
+                        <li class="color__item">
+                            <a href="#" class="color__link">
+                                <h3 class="color__title">«Атласное серебро»</h3>
+                            </a>
+                            <div class="color__desc">
+                                <div class="color__text">
+                                    <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
+                                        чтобы вы могли пользоваться ими каждый день. 
+                                        5‑минутной зарядки Fast Fuel хватит ещё на 3 часа воспроизведения. 
+                                        Фирменное звучание Beats в наушниках с технологией Bluetooth класса 1 будет сопровождать 
+                                        вас повсюду — куда бы вы ни отправились. 
+                                        Расположение чашек с мягкими амбушюрами можно регулировать — вы сможете носить их целый день.
+                                    </p>
+                                </div>
+                                <a href="#" class="color__close">
+                                    <svg class="color__close-item">
+                                        <use xlink:href="./img/icons/sprite.svg#close"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="color__item">
+                            <a href="#" class="color__link">
+                                <h3 class="color__title">«Чёрный матовый»</h3>
+                            </a>
+                            <div class="color__desc">
+                                <div class="color__text">
+                                    <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
+                                        чтобы вы могли пользоваться ими каждый день. 
+                                        5‑минутной зарядки Fast Fuel хватит ещё на 3 часа воспроизведения. 
+                                        Фирменное звучание Beats в наушниках с технологией Bluetooth класса 1 будет сопровождать 
+                                        вас повсюду — куда бы вы ни отправились. 
+                                        Расположение чашек с мягкими амбушюрами можно регулировать — вы сможете носить их целый день.
+                                    </p>
+                                </div>
+                                <a href="#" class="color__close">
+                                    <svg class="color__close-item">
+                                        <use xlink:href="./img/icons/sprite.svg#close"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="color__item">
+                            <a href="#" class="color__link">
+                                <h3 class="color__title">«Красный цитрус»</h3>
+                            </a>
+                            <div class="color__desc">
+                                <div class="color__text">
+                                    <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
+                                        чтобы вы могли пользоваться ими каждый день. 
+                                        5‑минутной зарядки Fast Fuel хватит ещё на 3 часа воспроизведения. 
+                                        Фирменное звучание Beats в наушниках с технологией Bluetooth класса 1 будет сопровождать 
+                                        вас повсюду — куда бы вы ни отправились. 
+                                        Расположение чашек с мягкими амбушюрами можно регулировать — вы сможете носить их целый день.
+                                    </p>
+                                </div>
+                                <a href="#" class="color__close">
+                                    <svg class="color__close-item">
+                                        <use xlink:href="./img/icons/sprite.svg#close"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </div>
     <div id="modal" class="modal">
