--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
         </section>
         <section class="section color-section">
             <div class="container color__container">
-                <h2 class="section__title">Цвета</h2>
-                <div class="color">
-                    <ul class="color__list">
-                        <li class="color__item">
-                            <a href="#" class="color__link">
-                                <h3 class="color__title">«Атласное серебро»</h3>
-                            </a>
-                            <div class="color__desc">
+                <h2 class="section__title color-section__title">Цвета</h2>
+                <ul class="color__list">
+                    <li class="color__item">
+                        <a href="#" class="color__link">
+                            <div class="color__link-item">«Атласное серебро»</div>
+                        </a>
+                        <div class="color__desc">
+                            <div class="color__desc-container">
                                 <div class="color__text">
                                     <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
                                         чтобы вы могли пользоваться ими каждый день. 
@@ -470,12 +470,14 @@
                                     </svg>
                                 </a>
                             </div>
-                        </li>
-                        <li class="color__item">
-                            <a href="#" class="color__link">
-                                <h3 class="color__title">«Чёрный матовый»</h3>
-                            </a>
-                            <div class="color__desc">
+                        </div>
+                    </li>
+                    <li class="color__item">
+                        <a href="#" class="color__link color__link--black">
+                            <div class="color__link-item">«Чёрный матовый»</div>
+                        </a>
+                        <div class="color__desc">
+                            <div class="color__desc-container">
                                 <div class="color__text">
                                     <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
                                         чтобы вы могли пользоваться ими каждый день. 
@@ -491,12 +493,14 @@
                                     </svg>
                                 </a>
                             </div>
-                        </li>
-                        <li class="color__item">
-                            <a href="#" class="color__link">
-                                <h3 class="color__title">«Красный цитрус»</h3>
-                            </a>
-                            <div class="color__desc">
+                        </div>
+                    </li>
+                    <li class="color__item">
+                        <a href="#" class="color__link color__link--red">
+                            <div class="color__link-item">«Красный цитрус»</div>
+                        </a>
+                        <div class="color__desc">
+                            <div class="color__desc-container">
                                 <div class="color__text">
                                     <p>Наушники Beats Solo3 могут работать до 40 часов без подзарядки, 
                                         чтобы вы могли пользоваться ими каждый день. 
@@ -512,9 +516,9 @@
                                     </svg>
                                 </a>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="section reviews-section" id="reviews">
