OPS changes in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             </a>
                             <ul class="menu__list">
                                 <li class="menu__item"><a href="#" data-scroll-to="benefits" class="menu__link">О нас</a></li>
-                                <li class="menu__item"><a href="#" data-scroll-to="benefits" class="menu__link">Наушники</a></li>
+                                <li class="menu__item"><a href="#" data-scroll-to="product" class="menu__link">Наушники</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="team" class="menu__link">Команда</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="color" class="menu__link">Цвета</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="reviews" class="menu__link">Отзывы</a></li>
@@ -747,13 +747,13 @@
     </div>
     <nav class="fixed-menu">
         <ul class="fixed-menu__list">
-            <li class="fixed-menu__item fixed-menu__item--active"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
-            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item fixed-menu__item--active"><a href="#" class="fixed-menu__link" data-scroll-to="about"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="benefits"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="product"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="team"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="color"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="reviews"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="order"></a></li>
         </ul>
     </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
