js refacturing code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="wrapper">
         <div class="main-content">
-            <section data-section-id="about" class="section hero">
+            <section data-sidemenu-theme="red" data-section-id="about" class="section hero">
                 <div class="container hero__container">
                     <header class="header">
                         <a href="#" class="logo">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </section>
-            <section data-section-id="benefits" class="section benefits-section">
+            <section data-sidemenu-theme="red" data-section-id="benefits" class="section benefits-section">
                 <div class="container benefits__container">
                     <div class="headline">
                         <h2 class="section__title headline__title">почему beats solo 3?</h2>
@@ -166,7 +166,7 @@
                     </ul>
                 </div>
             </section>
-            <section data-section-id="product" class="section product-section">
+            <section data-sidemenu-theme="red" data-section-id="product" class="section product-section">
                 <div class="container product__container">
                     <div class="arrow arrow--left">
                         <a href="#" class="arrow__link" id="left">
@@ -363,7 +363,7 @@
                     </div>
                 </div>
             </section>
-            <section data-section-id="team" class="section team-section">
+            <section data-sidemenu-theme="red" data-section-id="team" class="section team-section">
                 <div class="container team__container">
                     <h2 class="section__title">Команда</h2>
                     <div class="team">
@@ -446,7 +446,7 @@
                     </div>
                 </div>
             </section>
-            <section data-section-id="color" class="section color-section">
+            <section data-sidemenu-theme="black" data-section-id="color" class="section color-section">
                 <div class="container color__container">
                     <h2 class="section__title color-section__title">Цвета</h2>
                     <ul class="color__list">
@@ -522,7 +522,7 @@
                     </ul>
                 </div>
             </section>
-            <section data-section-id="reviews" class="section reviews-section">
+            <section data-sidemenu-theme="red" data-section-id="reviews" class="section reviews-section">
                 <div class="container">
                     <h2 class="section__title">Отзывы</h2>
                     <div class="reviews">
@@ -611,7 +611,7 @@
                     </div>
                 </div>
             </section>
-            <section data-section-id="order" class="section order-section section--font--color--white">
+            <section data-sidemenu-theme="red" data-section-id="order" class="section order-section section--font--color--white">
                 <div class="container">
                     <div class="section__title order__title">Закажите доставку</div>
                     <form class="form">
@@ -686,7 +686,7 @@
                     </form>
                 </div>
             </section>
-            <section data-section-id="map" class="section map-section">
+            <section data-sidemenu-theme="red" data-section-id="map" class="section map-section">
                 <img src="./img/content/map.png" alt="map" class="map">
                 <footer class="footer">
                     <div class="container footer__container">
