--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="order"></a></li>
         </ul>
     </nav>
-    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+    <script src="js/jquery.touchSwipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
