--- a/index.html
+++ b/index.html
@@ -686,6 +686,48 @@
                     </form>
                 </div>
             </section>
+            <section data-sidemenu-theme="red" class="section player-section" data-section-id="player">
+                <div class="container">
+                    <h2 class="section__title">Как мы работаем</h2>
+                    <div class="player-section__container">
+                      <div class="player" id="player">              
+                        <div class="player__wrapper">
+                            <video id="video" width="100%" height="100%" class="video">
+                                <source src="video/beats.mp4" type="video/mp4">
+                            </video>
+                            <svg class="player__splash-svg">
+                                <use xlink:href="./img/icons/sprite.svg#play"></use>
+                            </svg>
+                            <div class="player__splash">
+                                <img src="./img/content/splash_screen.jpg" alt="splash" class="player__splash-img">
+                            </div>
+                        </div>
+                        <div class="player__controls">
+                            <button class="player__start">
+                                <svg class="player__start-img">
+                                    <use xlink:href="./img/icons/sprite.svg#play"></use>
+                                </svg>
+                                <svg class="player__start-img player__start-img--pause">
+                                    <use xlink:href="./img/icons/sprite.svg#pause"></use>
+                                </svg>
+                            </button>
+                            <div class="player__playback">
+                                <button class="player__playback-button"></button>
+                            </div>
+                            <button class="player__volume">
+                                <svg class="player__volume-img">
+                                    <use xlink:href="./img/icons/sprite.svg#volume"></use>
+                                </svg>
+                            </button>
+                            <div class="player__volume-track">
+                                <button class="player__volume-button"></button>
+                            </div>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </section>
             <section data-sidemenu-theme="red" data-section-id="map" class="section map-section">
                 <img src="./img/content/map.png" alt="map" class="map">
                 <footer class="footer">
@@ -754,6 +796,8 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="color"></a></li>
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="reviews"></a></li>
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="order"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="player"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="map"></a></li>
         </ul>
     </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
