--- a/index.html
+++ b/index.html
@@ -725,11 +725,12 @@
                         </div>
                         </div>
                       </div>
-                    </div>
                 </div>
             </section>
             <section data-sidemenu-theme="red" data-section-id="map" class="section map-section">
-                <img src="./img/content/map.png" alt="map" class="map">
+                <div class="map" id="map">
+
+                </div>
                 <footer class="footer">
                     <div class="container footer__container">
                         <address class="contact">
@@ -800,6 +801,7 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="map"></a></li>
         </ul>
     </nav>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
