--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             </section>
             <section data-sidemenu-theme="red" data-section-id="team" class="section team-section">
                 <div class="container team__container">
-                    <h2 class="section__title">Команда</h2>
+                    <h2 class="section__title team__title">Команда</h2>
                     <div class="team">
                         <ul class="team__list">
                             <li class="team__item">
