--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                                     </svg>
                                 </div>
                                 <div class="feature__text">
-                                    До 40 часов работы
+                                    До 40 часов работыДо 40 часов работыДо 40 часов работы
                                 </div>
                             </li>
                             <li class="features__item feature">
