--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beats</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script
-			  src="https://code.jquery.com/jquery-3.5.1.min.js"
-			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-              crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 <body>
@@ -28,7 +23,7 @@
                         <nav class="menu menu__mobile hidden">
                             <a href="#" class="close">
                                 <svg class="close__item">
-                                    <use xlink:href="./img/icons/sprite.svg#cross"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#mobile_cross"></use>
                                 </svg>
                             </a>
                             <ul class="menu__list">
@@ -37,7 +32,7 @@
                                 <li class="menu__item"><a href="#" data-scroll-to="team" class="menu__link">Команда</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="color" class="menu__link">Цвета</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="reviews" class="menu__link">Отзывы</a></li>
-                                <li class="menu__item"><a href="#" data-scroll-to="about" class="menu__link">Как мы работаем</a></li>
+                                <li class="menu__item"><a href="#" data-scroll-to="player" class="menu__link">Как мы работаем</a></li>
                                 <li class="menu__item"><a href="#" data-scroll-to="map" class="menu__link">Контакты</a></li>
                             </ul>
                         </nav>
@@ -73,7 +68,9 @@
                         <ul class="features">
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="./img/icons/noise.svg" alt="noise">
+                                    <svg class="feature__icon-item">
+                                        <use xlink:href="./img/icons/sprite.svg#noise"></use>
+                                    </svg>
                                 </div>
                                 <div class="feature__text">
                                     Безупречный звук
@@ -81,7 +78,9 @@
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="./img/icons/charging.svg" alt="battery">
+                                    <svg class="feature__icon-item feature__icon-item--charging">
+                                        <use xlink:href="./img/icons/sprite.svg#charging"></use>
+                                    </svg>
                                 </div>
                                 <div class="feature__text">
                                     До 40 часов работы
@@ -89,7 +88,9 @@
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="./img/icons/plug.svg" alt="plug">
+                                    <svg class="feature__icon-item feature__icon-item--plug">
+                                        <use xlink:href="./img/icons/sprite.svg#plug"></use>
+                                    </svg>
                                 </div>
                                 <div class="feature__text">
                                     Технология Fast Fuel  
@@ -365,7 +366,7 @@
             </section>
             <section data-sidemenu-theme="red" data-section-id="team" class="section team-section">
                 <div class="container team__container">
-                    <h2 class="section__title">Команда</h2>
+                    <h2 class="section__title team__title">Команда</h2>
                     <div class="team">
                         <ul class="team__list">
                             <li class="team__item">
@@ -745,7 +746,7 @@
                                 <li class="socials__item">
                                     <a href="#" class="socials__item-link">
                                         <svg class="socials__icon">
-                                            <use xlink:href="./img/icons/sprite.svg#fb"></use>
+                                            <use xlink:href="./img/icons/sprite.svg#f"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -759,14 +760,14 @@
                                 <li class="socials__item">
                                     <a href="#" class="socials__item-link">
                                         <svg class="socials__icon">
-                                            <use xlink:href="./img/icons/sprite.svg#inst"></use>
+                                            <use xlink:href="./img/icons/sprite.svg#in"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="socials__item">
                                     <a href="#" class="socials__item-link">
                                         <svg class="socials__icon">
-                                            <use xlink:href="./img/icons/sprite.svg#tw"></use>
+                                            <use xlink:href="./img/icons/sprite.svg#tv"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -802,11 +803,8 @@
         </ul>
     </nav>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="main.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
-    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
