--- a/index.html
+++ b/index.html
@@ -693,35 +693,34 @@
                     <div class="player-section__container">
                       <div class="player" id="player">              
                         <div class="player__wrapper">
-                            <video id="video" width="100%" height="100%" class="video">
+                            <video id="video" width="100%" height="100%" class="video" poster="./img/content/splash_screen.jpg">
                                 <source src="video/beats.mp4" type="video/mp4">
-                            </video>
-                            <svg class="player__splash-svg">
+                            </video> 
+                            <svg class="play__item play">
                                 <use xlink:href="./img/icons/sprite.svg#play"></use>
                             </svg>
-                            <div class="player__splash">
-                                <img src="./img/content/splash_screen.jpg" alt="splash" class="player__splash-img">
-                            </div>
-                        </div>
+                        </div>  
                         <div class="player__controls">
-                            <button class="player__start">
-                                <svg class="player__start-img">
-                                    <use xlink:href="./img/icons/sprite.svg#play"></use>
-                                </svg>
-                                <svg class="player__start-img player__start-img--pause">
-                                    <use xlink:href="./img/icons/sprite.svg#pause"></use>
-                                </svg>
-                            </button>
-                            <div class="player__playback">
-                                <button class="player__playback-button"></button>
+                            <div class="duration">
+                                <div class="duration__item play">
+                                    <svg class="duration__item-img">
+                                        <use xlink:href="./img/icons/sprite.svg#play"></use>
+                                    </svg>
+                                    <svg class="duration__item-img duration__item-img--pause">
+                                        <use xlink:href="./img/icons/sprite.svg#pause"></use>
+                                    </svg>    
+                                </div>
+                                <input type="range" class="duration__length" id="durationLevel">
                             </div>
-                            <button class="player__volume">
-                                <svg class="player__volume-img">
-                                    <use xlink:href="./img/icons/sprite.svg#volume"></use>
-                                </svg>
-                            </button>
-                            <div class="player__volume-track">
-                                <button class="player__volume-button"></button>
+                            <div class="sound">
+                                <div class="sound__item" id="mic">
+                                    <svg class="sound__item-img">
+                                        <use xlink:href="./img/icons/sprite.svg#volume"></use>
+                                    </svg>
+                                </div>
+                                <div class="sound__volume">
+                                    <input type="range" class="duration__length duration__length--other" id="micLevel">
+                                </div>
                             </div>
                         </div>
                         </div>
