--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                                         <use xlink:href="./img/icons/sprite.svg#pause"></use>
                                     </svg>    
                                 </div>
-                                <input type="range" class="duration__length" id="durationLevel">
+                                <input type="range" class="duration__length" id="durationLevel" oninput="range()">
                             </div>
                             <div class="sound">
                                 <div class="sound__item" id="mic">
@@ -719,7 +719,7 @@
                                     </svg>
                                 </div>
                                 <div class="sound__volume">
-                                    <input type="range" class="duration__length duration__length--other" id="micLevel">
+                                    <input type="range" class="duration__length duration__length--other" id="micLevel" oninput="range()">
                                 </div>
                             </div>
                         </div>
