--- a/index.html
+++ b/index.html
@@ -620,35 +620,35 @@
                         <div class="form__col">
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <span class="form__title">Имя</span>
                                     <input type="text" name="name" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Телефон</div>
+                                    <span class="form__title">Телефон</span>
                                     <input type="text" name="phone" class="form__input">
                                 </label>
                             </div>
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Улица</div>
+                                    <span class="form__title">Улица</span>
                                     <input type="text" class="form__input" name="street">
                                 </label>
                             </div>
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Дом</div>
+                                    <span class="form__title">Дом</span>
                                     <input type="text" class="form__input" name="house">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Корпус</div>
+                                    <span class="form__title">Корпус</span>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Квартира</div>
+                                    <span class="form__title">Квартира</span>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Этаж</div>
+                                    <span class="form__title">Этаж</span>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
@@ -656,27 +656,27 @@
                         <div class="form__col">
                             <div class="form__row form__row--textarea">
                                 <label class="form__block">
-                                    <div class="form__title">Комментарий</div>
+                                    <span class="form__title">Комментарий</span>
                                     <textarea class="form__input form__input--textarea" name="comment"></textarea>
                                 </label>
                             </div>
                             <div class="form__controls">
                                 <label class="radio">
                                     <input type="radio" name="option" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Потребуется сдача</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Потребуется сдача</span>
                                 </label>
                                 <label class="radio">
                                     <input type="radio" name="option" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Оплата по карте</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Оплата по карте</span>
                                 </label>
                             </div>
                             <div class="form__controls">
                                 <label class="radio radio--checkbox">
                                     <input type="checkbox" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Не перезванивать</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Не перезванивать</span>
                                 </label>
                             </div>
                             <div class="form__buttons">
