--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                     <div class="player-section__container">
                       <div class="player" id="player">              
                         <div class="player__wrapper">
-                            <video id="video" width="100%" height="100%" class="video" poster="./img/content/splash_screen.jpg">
+                            <video id="video" class="video" poster="./img/content/splash_screen.jpg">
                                 <source src="video/beats.mp4" type="video/mp4">
                             </video> 
                             <svg class="play__item play">
@@ -710,7 +710,7 @@
                                         <use xlink:href="./img/icons/sprite.svg#pause"></use>
                                     </svg>    
                                 </div>
-                                <input type="range" class="duration__length" id="durationLevel" oninput="range()">
+                                <input type="range" class="duration__length" id="durationLevel">
                             </div>
                             <div class="sound">
                                 <div class="sound__item" id="mic">
