--- a/src/index.html
+++ b/src/index.html
@@ -620,35 +620,35 @@
                         <div class="form__col">
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <span class="form__title">Имя</span>
                                     <input type="text" name="name" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Телефон</div>
+                                    <span class="form__title">Телефон</span>
                                     <input type="text" name="phone" class="form__input">
                                 </label>
                             </div>
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Улица</div>
+                                    <span class="form__title">Улица</span>
                                     <input type="text" class="form__input" name="street">
                                 </label>
                             </div>
                             <div class="form__row">
                                 <label class="form__block">
-                                    <div class="form__title">Дом</div>
+                                    <span class="form__title">Дом</span>
                                     <input type="text" class="form__input" name="house">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Корпус</div>
+                                    <span class="form__title">Корпус</span>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Квартира</div>
+                                    <span class="form__title">Квартира</span>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Этаж</div>
+                                    <span class="form__title">Этаж</span>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
@@ -656,27 +656,27 @@
                         <div class="form__col">
                             <div class="form__row form__row--textarea">
                                 <label class="form__block">
-                                    <div class="form__title">Комментарий</div>
+                                    <span class="form__title">Комментарий</span>
                                     <textarea class="form__input form__input--textarea" name="comment"></textarea>
                                 </label>
                             </div>
                             <div class="form__controls">
                                 <label class="radio">
                                     <input type="radio" name="option" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Потребуется сдача</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Потребуется сдача</span>
                                 </label>
                                 <label class="radio">
                                     <input type="radio" name="option" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Оплата по карте</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Оплата по карте</span>
                                 </label>
                             </div>
                             <div class="form__controls">
                                 <label class="radio radio--checkbox">
                                     <input type="checkbox" class="radio__item">
-                                    <div class="radio__visible"></div>
-                                    <div class="radio__title">Не перезванивать</div>
+                                    <span class="radio__visible"></span>
+                                    <span class="radio__title">Не перезванивать</span>
                                 </label>
                             </div>
                             <div class="form__buttons">
@@ -693,7 +693,7 @@
                     <div class="player-section__container">
                       <div class="player" id="player">              
                         <div class="player__wrapper">
-                            <video id="video" width="100%" height="100%" class="video" poster="./img/content/splash_screen.jpg">
+                            <video id="video" class="video" poster="./img/content/splash_screen.jpg">
                                 <source src="video/beats.mp4" type="video/mp4">
                             </video> 
                             <svg class="play__item play">
@@ -710,7 +710,7 @@
                                         <use xlink:href="./img/icons/sprite.svg#pause"></use>
                                     </svg>    
                                 </div>
-                                <input type="range" class="duration__length" id="durationLevel" oninput="range()">
+                                <input type="range" class="duration__length" id="durationLevel">
                             </div>
                             <div class="sound">
                                 <div class="sound__item" id="mic">
