--- a/src/index.html
+++ b/src/index.html
@@ -801,6 +801,11 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link" data-scroll-to="map"></a></li>
         </ul>
     </nav>
+    <div class="fixed-arrow">
+        <svg class="fixed-arrow__img">
+            <use xlink:href="./img/icons/sprite.svg#arrow_up"></use>
+        </svg>
+    </div>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="main.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
